--- a/Source/Mosa.Tool.GDBDebugger/Mosa.Tool.GDBDebugger.csproj
+++ b/Source/Mosa.Tool.GDBDebugger/Mosa.Tool.GDBDebugger.csproj
@@ -69,6 +69,12 @@
     <Compile Include="View\StackFrameView.designer.cs">
       <DependentUpon>StackFrameView.cs</DependentUpon>
     </Compile>
+    <Compile Include="View\SymbolView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\SymbolView.designer.cs">
+      <DependentUpon>SymbolView.cs</DependentUpon>
+    </Compile>
     <Compile Include="WatchEntry.cs" />
     <Compile Include="BreakPoint.cs" />
     <Compile Include="View\ControlView.cs">
@@ -189,6 +195,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="View\StatusView.resx">
       <DependentUpon>StatusView.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\SymbolView.resx">
+      <DependentUpon>SymbolView.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
