- New launcher option: Launch MOSA Debugger

--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,7 @@ build.force
 # Uncomment if necessary however generally it will be regenerated when needed
 #!**/packages/repositories.config
 /Source/*.sdf
+/.vs/ProjectSettings.json
+/.vs/slnx.sqlite
+/.vs/VSWorkspaceState.json
+/.vs
