--- a/Source/Mosa.UnitTest.Collection/Mosa.UnitTest.Collection.csproj
+++ b/Source/Mosa.UnitTest.Collection/Mosa.UnitTest.Collection.csproj
@@ -32,6 +32,7 @@
     <NoStdLib>false</NoStdLib>
     <PlatformTarget>AnyCPU</PlatformTarget>
     <Prefer32Bit>false</Prefer32Bit>
+    <NoWarn>168,162</NoWarn>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugSymbols>True</DebugSymbols>
@@ -41,8 +42,9 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <AllowUnsafeBlocks>false</AllowUnsafeBlocks>
     <Prefer32Bit>false</Prefer32Bit>
+    <NoWarn>168,162</NoWarn>
   </PropertyGroup>
   <PropertyGroup>
   </PropertyGroup>
