--- a/Source/Mosa.Workspace.UnitTest.Debug/Mosa.Workspace.UnitTest.Debug.csproj
+++ b/Source/Mosa.Workspace.UnitTest.Debug/Mosa.Workspace.UnitTest.Debug.csproj
@@ -23,6 +23,8 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <Prefer32Bit>false</Prefer32Bit>
+    <NoWarn>162</NoWarn>
+    <AllowUnsafeBlocks>false</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugSymbols>True</DebugSymbols>
@@ -34,6 +36,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <Prefer32Bit>false</Prefer32Bit>
+    <NoWarn>162</NoWarn>
   </PropertyGroup>
   <PropertyGroup>
     <StartupObject>Mosa.Workspace.UnitTest.Debug.Program</StartupObject>
