- Null check optimization (in progress)

--- a/Source/Mosa.Compiler.Framework/Mosa.Compiler.Framework.csproj
+++ b/Source/Mosa.Compiler.Framework/Mosa.Compiler.Framework.csproj
@@ -101,6 +101,7 @@
     <Compile Include="Intrinsics\Load64.cs" />
     <Compile Include="Intrinsics\InternalsForArray.cs" />
     <Compile Include="IR\AddFloatR4.cs" />
+    <Compile Include="IR\NewObject.cs" />
     <Compile Include="IR\BaseStoreParameterInstruction.cs" />
     <Compile Include="IR\LoadParameterCompound.cs" />
     <Compile Include="IR\LoadParameterFloatR4.cs" />
@@ -190,6 +191,7 @@
     <Compile Include="RegisterAllocator\VirtualRegister.cs" />
     <Compile Include="RegisterAllocator\GreedyRegisterAllocator.cs" />
     <Compile Include="Stages\DebugFileGenerationStage.cs" />
+    <Compile Include="Stages\NewObjectStage.cs" />
     <Compile Include="Stages\PreciseGCStage.cs" />
     <Compile Include="Stages\GraphVizStage.cs" />
     <Compile Include="Stages\ExceptionPrologueStage.cs" />
