--- a/Source/Mosa.UnitTest.Collection.xUnit/Mosa.UnitTest.Collection.xUnit.csproj
+++ b/Source/Mosa.UnitTest.Collection.xUnit/Mosa.UnitTest.Collection.xUnit.csproj
@@ -122,6 +122,7 @@
     </Compile>
     <Compile Include="ListFixture.cs" />
     <Compile Include="NewObjectFixture.cs" />
+    <Compile Include="NullCheckOptimizationFixture.cs" />
     <Compile Include="OptimizationFixture.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RegisterAllocatorFixture.cs" />
