--- a/Source/Mosa.ClassLib/Mosa.ClassLib.nuspec
+++ b/Source/Mosa.ClassLib/Mosa.ClassLib.nuspec
@@ -16,6 +16,6 @@
 		<tags>MOSA Compiler</tags>
 	</metadata>
 	<files>
-		<file src="..\..\bin\Mosa.ClassLib.dll" target="lib" />
+		<file src="..\..\bin\Mosa.ClassLib.dll" target="lib\net45" />
 	</files>
 </package>
