--- a/Source/Mosa.Kernel.x86/Mosa.Kernel.x86.nuspec
+++ b/Source/Mosa.Kernel.x86/Mosa.Kernel.x86.nuspec
@@ -22,6 +22,6 @@
 		</dependencies>
 	</metadata>
 	<files>
-		<file src="..\..\bin\Mosa.Kernel.x86.dll" target="lib" />
+		<file src="..\..\bin\Mosa.Kernel.x86.dll" target="lib\net45" />
 	</files>
 </package>
