--- a/Source/Mosa.Compiler.Framework/Mosa.Compiler.Framework.csproj
+++ b/Source/Mosa.Compiler.Framework/Mosa.Compiler.Framework.csproj
@@ -100,6 +100,8 @@
     <Compile Include="Intrinsics\Load64.cs" />
     <Compile Include="Intrinsics\InternalsForArray.cs" />
     <Compile Include="IR\AddFloatR4.cs" />
+    <Compile Include="IR\CallDirect.cs" />
+    <Compile Include="IR\CallInterface.cs" />
     <Compile Include="IR\CallVirtual.cs" />
     <Compile Include="IR\CallStatic.cs" />
     <Compile Include="IR\NewString.cs" />
@@ -194,6 +196,7 @@
     <Compile Include="RegisterAllocator\VirtualRegister.cs" />
     <Compile Include="RegisterAllocator\GreedyRegisterAllocator.cs" />
     <Compile Include="Stages\DebugFileGenerationStage.cs" />
+    <Compile Include="Stages\LowerCallsStage.cs" />
     <Compile Include="Stages\LowerIRStage.cs" />
     <Compile Include="Stages\PreciseGCStage.cs" />
     <Compile Include="Stages\GraphVizStage.cs" />
