--- a/Source/Mosa.Compiler.Framework/Mosa.Compiler.Framework.csproj
+++ b/Source/Mosa.Compiler.Framework/Mosa.Compiler.Framework.csproj
@@ -100,6 +100,20 @@
     <Compile Include="Intrinsics\Load64.cs" />
     <Compile Include="Intrinsics\InternalsForArray.cs" />
     <Compile Include="IR\AddFloatR4.cs" />
+    <Compile Include="IR\Unbox.cs" />
+    <Compile Include="IR\Unbox32.cs" />
+    <Compile Include="IR\Unbox64.cs" />
+    <Compile Include="IR\BoxR8.cs" />
+    <Compile Include="IR\MemoryCopy.cs" />
+    <Compile Include="IR\Rethrow.cs" />
+    <Compile Include="IR\GetVirtualFunctionPtr.cs" />
+    <Compile Include="IR\IsInstanceOfType.cs" />
+    <Compile Include="IR\MemorySet.cs" />
+    <Compile Include="IR\IsInstanceOfInterfaceType.cs" />
+    <Compile Include="IR\Box32.cs" />
+    <Compile Include="IR\BoxR4.cs" />
+    <Compile Include="IR\Box64.cs" />
+    <Compile Include="IR\Box.cs" />
     <Compile Include="IR\To64.cs" />
     <Compile Include="IR\CallDirect.cs" />
     <Compile Include="IR\CallInterface.cs" />
