--- a/Source/Mosa.Platform.x86/Mosa.Platform.x86.csproj
+++ b/Source/Mosa.Platform.x86/Mosa.Platform.x86.csproj
@@ -151,23 +151,24 @@
     <Compile Include="Intrinsic\SetFS.cs" />
     <Compile Include="Intrinsic\SyncCompareAndSwap.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Stages\BuildStackStage.cs" />
-    <Compile Include="Stages\StartUpStage.cs" />
-    <Compile Include="Stages\SSEInitStage.cs" />
-    <Compile Include="Stages\FloatingPointStage.cs" />
-    <Compile Include="Stages\FinalTweakTransformationStage.cs" />
-    <Compile Include="Stages\SimpleDeadCodeRemovalStage.cs" />
+    <Compile Include="MethodStages\BuildStackStage.cs" />
+    <Compile Include="MethodStages\IRSubstitutionStage.cs" />
+    <Compile Include="CompilerStages\StartUpStage.cs" />
+    <Compile Include="CompilerStages\SSEInitStage.cs" />
+    <Compile Include="MethodStages\FloatingPointStage.cs" />
+    <Compile Include="MethodStages\FinalTweakTransformationStage.cs" />
+    <Compile Include="MethodStages\SimpleDeadCodeRemovalStage.cs" />
     <Compile Include="Instructions\Mulsd.cs" />
     <Compile Include="Instructions\DivSD.cs" />
     <Compile Include="Instructions\RoundSD.cs" />
     <Compile Include="Instructions\SubSD.cs" />
-    <Compile Include="Stages\AddressModeConversionStage.cs" />
+    <Compile Include="MethodStages\AddressModeConversionStage.cs" />
     <Compile Include="ControlRegister.cs" />
-    <Compile Include="Stages\FixedRegisterAssignmentStage.cs" />
+    <Compile Include="MethodStages\FixedRegisterAssignmentStage.cs" />
     <Compile Include="Instructions\FarJmp.cs" />
     <Compile Include="Instructions\Leave.cs" />
     <Compile Include="Instructions\RoundSS.cs" />
-    <Compile Include="Stages\InterruptVectorStage.cs" />
+    <Compile Include="CompilerStages\InterruptVectorStage.cs" />
     <Compile Include="Intrinsic\GetEBP.cs" />
     <Compile Include="Intrinsic\GetMethodLookupTable.cs" />
     <Compile Include="Intrinsic\Cli.cs" />
@@ -197,14 +198,14 @@
     <Compile Include="Intrinsic\Nop.cs" />
     <Compile Include="Intrinsic\Out8.cs" />
     <Compile Include="Intrinsic\Sti.cs" />
-    <Compile Include="Stages\MethodTableBuilderStage.cs" />
+    <Compile Include="CompilerStages\MethodTableBuilderStage.cs" />
     <Compile Include="SegmentRegister.cs" />
     <Compile Include="Instructions\Branch.cs" />
     <Compile Include="Instructions\Cvttsd2si.cs" />
     <Compile Include="Instructions\Cvttss2si.cs" />
     <Compile Include="Instructions\Div.cs" />
     <Compile Include="Instructions\Jmp.cs" />
-    <Compile Include="Stages\Multiboot0695Stage.cs" />
+    <Compile Include="CompilerStages\Multiboot0695Stage.cs" />
     <Compile Include="Instructions\Call.cs" />
     <Compile Include="Instructions\Movsd.cs" />
     <Compile Include="Instructions\Movss.cs" />
@@ -212,7 +213,7 @@
     <Compile Include="Instructions\Movzx.cs" />
     <Compile Include="Instructions\Movsx.cs" />
     <Compile Include="X86CodeEmitter.cs" />
-    <Compile Include="Stages\TweakTransformationStage.cs" />
+    <Compile Include="MethodStages\TweakTransformationStage.cs" />
     <Compile Include="Instructions\Adc.cs" />
     <Compile Include="Instructions\Add.cs" />
     <Compile Include="Instructions\Cdq.cs" />
@@ -280,16 +281,13 @@
     <Compile Include="LegacyOpCode.cs" />
     <Compile Include="X86Instruction.cs" />
     <Compile Include="Instructions\Nop.cs" />
-    <Compile Include="DefaultCallingConvention.cs">
-      <SubType>Code</SubType>
-    </Compile>
     <Compile Include="GeneralPurposeRegister.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Stages\IRTransformationStage.cs">
+    <Compile Include="MethodStages\IRTransformationStage.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Stages\LongOperandTransformationStage.cs">
+    <Compile Include="MethodStages\LongOperandTransformationStage.cs">
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="SSE2Register.cs">
